<resources>
    <string name="app_name">ObiletCaseStudy</string>
    <string name="busTicket">Otobüs Bileti</string>
    <string name="flightTicket">Uçak Bileti</string>
    <string name="from_where">Nereden</string>
    <string name="to_where">Nereye</string>
    <string name="date">Tarih</string>
    <string name="outgoing">Gidiş</string>
    <string name="returning">Dönüş</string>
    <string name="today">Bugün</string>
    <string name="tomorrow">Yarın</string>
    <string name="find_ticket">Bileti Bul</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="try_again">Tekrar dene</string>
    <string name="give_up">Vazgeç</string>
    <string name="error_occurred">Bir hata oluştu!</string>
    <string name="error_dialog_content">Şu an isteğinizi gerçekleştiremiyoruz. Lütfen tekrar deneyiniz.</string>
    <string name="search">Ara..</string>
    <string name="close">Kapat</string>
    <string name="same_locations_error_message">Users can not select same location as both origin and destination.</string>
    <string name="departure_arrival">"  KALKIŞ             VARIŞ"</string>
    <string name="departure_arrival_time">%1s -> %2s</string>
    <string name="journey_location">%1s - %2s</string>
    <string name="tl_args">%1s TL</string>
    <string name="month_day">%1s\n%2s</string>
    <string name="date_error">Gidiş tarihi dönüş tarihinden önce olamaz.</string>
    <string name="error">Hata!</string>
    <string name="add_passenger">Yolcu Ekle</string>
    <string name="adult">Yetişkin</string>
    <string name="student">Öğrenci</string>
    <string name="student_age">(12–24 Yaş)</string>
    <string name="child">Çocuk</string>
    <string name="child_age">(2–11 Yaş)</string>
    <string name="baby">Bebek</string>
    <string name="baby_age">(0–2 Yaş)</string>
    <string name="above_65">65 Yaş Üzeri</string>
    <string name="passenger_count">%1d YOLCU</string>
    <string name="approve">Onayla</string>
</resources>