<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="20dp">
    <TextView
        android:text="@string/error"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/error_dialog_content"
        android:textAlignment="center"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClose"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textAllCaps="true" />

</LinearLayout>