<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButtonSwap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:src="@drawable/outline_swap_vertical_circle_30"
        app:layout_constraintBottom_toTopOf="@+id/cardViewTo"
        app:layout_constraintEnd_toEndOf="@+id/cardViewFrom"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFrom"
        app:tint="@color/material_dynamic_neutral60"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:foreground="?selectableItemBackground"
        app:cardElevation="0dp"
        app:contentPaddingBottom="16dp"
        app:contentPaddingLeft="8dp"
        app:contentPaddingRight="8dp"
        app:contentPaddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/from_where"
                android:textColor="@color/indigo_700" />

            <TextView
                android:id="@+id/textViewFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/ic_location_from"
                app:drawableTint="@color/textColor"
                tools:text="Ankara" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:foreground="?selectableItemBackground"
        app:cardElevation="0dp"
        app:contentPaddingBottom="16dp"
        app:contentPaddingLeft="8dp"
        app:contentPaddingRight="8dp"
        app:contentPaddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFrom">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/to_where"
                android:textColor="@color/indigo_700" />

            <TextView
                android:id="@+id/textViewTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/ic_location_where"
                app:drawableTint="@color/textColor"
                tools:text="İstanbul" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:foreground="?selectableItemBackground"
        app:cardElevation="0dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                android:textColor="@color/indigo_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/baseline_calendar_month_18"
                app:drawableTint="@color/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="1 Nisan 2018 Pazar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#888888"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/today"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTomorrow"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/tomorrow"
                android:textColor="@color/textColor"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/buttonToday"
                app:layout_constraintTop_toBottomOf="@+id/buttonToday" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:text="@string/find_ticket"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewDate" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        android:padding="24dp"
        android:text="@string/lorem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFind" />


</androidx.constraintlayout.widget.ConstraintLayout>