<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        app:cardElevation="0dp"
        app:contentPaddingBottom="16dp"
        app:contentPaddingLeft="8dp"
        app:contentPaddingRight="8dp"
        app:contentPaddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/from_where"
                android:textColor="@color/indigo_700" />

            <TextView
                android:id="@+id/textViewFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/ic_location_from"
                app:drawableTint="@color/textColor"
                tools:text="Ankara" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        app:cardElevation="0dp"
        app:contentPaddingBottom="16dp"
        app:contentPaddingLeft="8dp"
        app:contentPaddingRight="8dp"
        app:contentPaddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFrom">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/to_where"
                android:textColor="@color/indigo_700" />

            <TextView
                android:id="@+id/textViewTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/ic_location_where"
                app:drawableTint="@color/textColor"
                tools:text="İstanbul" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <ImageButton
        android:id="@+id/imageButtonSwap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:src="@drawable/outline_swap_vertical_circle_30"
        app:layout_constraintBottom_toTopOf="@+id/cardViewTo"
        app:layout_constraintEnd_toEndOf="@+id/cardViewFrom"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFrom"
        app:tint="@color/material_dynamic_neutral60"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardElevation="0dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/viewOutGoing"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewReturning"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewOutGoing"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/outgoing"
                android:textColor="@color/indigo_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewOutgoingDayNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                app:drawableStartCompat="@drawable/baseline_calendar_month_18"
                app:drawableTint="@color/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="18" />

            <TextView
                android:id="@+id/textViewOutgoingMonthDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@+id/textViewOutgoingDayNumber"
                app:layout_constraintTop_toTopOf="@+id/textViewOutgoingDayNumber"
                tools:text="Kasım\nPazartesi" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/textColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/returning"
                android:textColor="@color/indigo_700"
                app:layout_constraintStart_toStartOf="@+id/textViewReturningDayNumber"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewReturningDayNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="28sp"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:text="20" />

            <TextView
                android:id="@+id/textViewReturningMonthDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@+id/textViewReturningDayNumber"
                app:layout_constraintTop_toTopOf="@+id/textViewReturningDayNumber"
                tools:text="Kasım\nPazartesi" />

            <ImageButton
                android:id="@+id/imageButtonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/textViewReturningMonthDay"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/baseline_clear_24"
                app:tint="@color/textColor" />

            <ImageButton
                android:id="@+id/imageButtonAddReturning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/indigo_500"
                android:padding="8dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/textViewReturningDayNumber"
                app:layout_constraintStart_toStartOf="@+id/textViewReturningDayNumber"
                app:srcCompat="@drawable/baseline_add_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:contentPadding="8dp"
        app:contentPaddingBottom="12dp"
        app:contentPaddingTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPassengers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/baseline_person_18"
                app:drawableTint="@color/textColor"
                tools:text="1 YETİŞKİN" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_passenger"
                android:textColor="@color/material_dynamic_neutral60" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:text="@string/find_ticket"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPerson" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        android:padding="24dp"
        android:text="@string/lorem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFind" />

</androidx.constraintlayout.widget.ConstraintLayout>